--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-﻿
+
 body {
     background-color: #1F2833;
 }
@@ -167,4 +167,88 @@ td {
     border-collapse: collapse;
     padding: 15px;
     text-align: left;
+}
+
+.toolBar {
+    color: white;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    height: initial;
+    font-size: large;
+    width: 250px;
+    float: left;
+    margin: 2%;
+    text-align: center;
+}
+
+.toolBar:hover {
+    background-color: #45A29E;
+}
+
+#fastButton {
+    float: right;
+    position: relative;
+    right: 200px;
+}
+
+#flashButton {
+    float:left;
+    position: relative;
+    left: 200px;
+}
+
+.portfolioButton {
+    color: white;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    height: initial;
+    font-size: medium;
+    width: 100px;
+}
+
+.videoFlascards {
+    display: block;
+    height: 55%;
+    left: 15%;
+    position: absolute;
+    top: 35%;
+    width: 0;
+}
+
+#videoflash {
+    display: block;
+    position: relative;
+    top: 35%;
+}
+
+.videoFastCheckOut {
+    display: block;
+    height: 55%;
+    right: 40%;
+    position: absolute;
+    top: 54%;
+    width: 0;
+}
+
+#videoFast {
+    display: block;
+    position: relative;
+    bottom: 0.2%;
+}
+
+.flascardContainer {
+    background-color: #45A29E;
+    width: 17%;
+    height: 10%;
+    padding: 1%;
+}
+
+.flashButton{
+    color: white;
+    background-color: #1F2833;
+    text-align: left;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    height: initial;
+    font-size: small;
+    border-radius: 8px;
+    width: 60%;
+    padding: 1%;
 }
