--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-
+﻿
 body {
     background-color: #1F2833;
 }
 
 #headPic {
-    width: 1024px;
-    height: 300px;
+    width: 64.000em;
+    height: 18.750em;
     opacity: 0.45;
 }
 
@@ -16,19 +16,21 @@ body {
 #header1 {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: white;
+    text-shadow: 0.40em 0.40em 0.40em #1F2833;
 }
 
 #header2 {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: white;
+    text-shadow: 0.40em 0.40em 0.40em #1F2833;
 }
 
 #introHeader {
     font-size: large;
     text-align: center;
     position: absolute;
-    bottom: 8px;
-    right: 16px;
+    bottom: 0.50em;
+    right: 1em;
 }
 
 .button:hover {
@@ -38,14 +40,14 @@ body {
 .button {
     color: white;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    height: initial;
-    font-size: large;
-    width: 100px;
+    height: 2.5em;
+    text-align: center;
+    font-size: larger;
     background-color: #1F2833;
-    border-radius: 8px;
-    width: 200%;
-    padding: 1%;
-    text-align: left;
+    border-radius: 0.50em;
+    width: 8em;
+    padding: 0.12em;
+    margin: 20%;
 }
 
 a:link {
@@ -53,9 +55,9 @@ a:link {
     font-weight: bold;
     background-color: #ddd;
     color: blue;
-} 
+}
 
-.container1 {
+.containerPic {
     position: relative;
     text-align: right;
     color: white;
@@ -63,8 +65,8 @@ a:link {
 
 .container2 {
     position: absolute;
-    top: 8px;
-    left: 16px;
+    top: 0.50em;
+    left: 1em;
 }
 
 .aboutMeContainer {
@@ -72,7 +74,7 @@ a:link {
     font-size: medium;
     text-align: left;
     color: white;
-    margin: 3%;
+    margin: 2em;
 }
 
 #aboutHeader {
@@ -83,97 +85,133 @@ a:link {
 
 .myPicContainer {
     position: absolute;
-    top: 60px;
-    right: 170px;
+    top: 3.75em;
+    right: 10.73em;
 }
 
 .resumeHeaders {
     color: white;
-    font-size: large;
+    font-size: 1.2em;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: bold;
-    text-shadow: 2px 2px black;
-}
-
-#profileContainer {
-    background-color: #45A29E;
+    margin: 2%;
 }
 
 #profileContent {
     color: white;
-    font-size: small;
+    font-size: 0.8em;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     padding: 1%;
     margin: 2%;
+    border: 0.06em solid white;
+    border-radius: 0.50em;
+    background-color: #45A29E;
+    width: 90em;
 }
 
 #skillsContent {
-    width: 570px;
+    width: 37.50em;
+    position: absolute;
+    left: 0.50em;
+    top: 31em;
 }
+
+#skillsHeader {
+    position: absolute;
+    left: 0.50em;
+    top: 23em;
+} 
 
 #techExperienceHeader {
     position: absolute;
-    right: 38%;
-    top: 63%;
+    right: 23em;
+    top: 23em;
 }
 
 .techSkillsContent {
-    background-color: #45A29E;
     position: absolute;
     right: 3%;
     bottom: 2%;
-    width: 570px;
+    width: 37.50em;
 }
 
 .skillsBulletPoints {
     color: white;
-    font-size: small;
+    font-size: 0.8em;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-.educationHeaders {
+#educationBackgroundContainer {
+    position: absolute;
+    top: 47em;
+    left: 0.50em;
+}
+
+#bachelorsContainer {
+    border: 0.06em solid white;
+    border-radius: 0.50em;
     background-color: #45A29E;
-    width: 570px;
-    padding: 0;
+    padding: 1%;
+    margin: 2%;
+    width: 72em;
+}
+
+.educationHeaders {
+    padding: 0.1%;
     margin: 0;
     color: white;
-    font-size: small;
+    font-size: 0.8em;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .educationHeaders1 {
-    padding: 0.5px;
+    padding: 0.1%;
     margin: 0;
     font-style: italic;
     color: white;
-    font-size: smaller;
+    font-size: 0.8em;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+#workExpeContainer{
+    position: absolute;
+    top: 62em;
+    left: 1em; 
+    width: 75em;
 }
 
 .table {
     color: white;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: small;
+    font-size: 0.9em;
     margin: 1%;
 }
 
 th {
     background-color: #C5C6C7;
-    font-size: medium;
-    border: 1px solid white;
-    border-radius: 8px;
+    font-size: 1.2em;
+    border: 0.06em solid white;
+    border-radius: 0.50em;
     border-collapse: collapse;
-    padding: 15px;
+    padding: 0.94px;
     text-align: center;
+    color: #1F2833;
 }
 
 td {
     background-color: #45A29E;
-    border: 1px solid white;
-    border-radius: 8px;
+    border: 0.06em solid white;
+    border-radius: 0.50em;
     border-collapse: collapse;
-    padding: 15px;
+    padding: 0.94em;
     text-align: left;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.data {
+    padding: 0;
+    text-align: left;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .toolBar {
