--- a/style.css
+++ b/style.css
@@ -130,8 +130,8 @@ a:link {
 
 .techSkillsContent {
     position: absolute;
-    right: 3%;
-    bottom: 2%;
+    left: 18.5em;
+    top: 15.5em;
     width: 37.50em;
 }
 
