--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 #headPic {
-    width: 64.000em;
+    width: 100%;
     height: 18.750em;
     opacity: 0.45;
 }
@@ -214,6 +214,38 @@ td {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
+#videoHeadersContainer{
+    width: 75em;
+    margin: 1.5%;
+    padding:0.4%;
+}
+
+#flashHeaderContainer {
+    color: white;
+    font-size: 1em;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    margin: 1%;
+    text-align: center;
+    width: 37.5em;
+    position: absolute;
+    top: 19.5em;
+    left: 0.5em;
+}
+
+#fastCheckoutHeaderContainer {
+    color: white;
+    font-size: 1em;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    margin: 1%;
+    text-align: center;
+    width: 37.5em;
+    position:absolute;
+    top:19.5em;
+    right: 0.5em;
+}
+
 .toolBar {
     color: white;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -224,7 +256,7 @@ td {
     margin: 2%;
     text-align: center;
     background-color: #45A29E;
-    border-radius:8px;
+    border-radius: 8px;
 }
 
 .toolBar:hover {
