--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ a:link {
     border: 0.06em solid white;
     border-radius: 0.50em;
     background-color: #45A29E;
-    width: 90em;
+    width: 100%;
 }
 
 #skillsContent {
@@ -153,7 +153,7 @@ a:link {
     background-color: #45A29E;
     padding: 1%;
     margin: 2%;
-    width: 72em;
+    width: 100%;
 }
 
 .educationHeaders {
@@ -246,6 +246,13 @@ td {
     right: 0.5em;
 }
 
+#videosContainer{
+    background-color:white;
+
+}
+
+
+
 .toolBar {
     color: white;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -281,36 +288,6 @@ td {
     height: initial;
     font-size: medium;
     width: 100px;
-}
-
-.videoFlascards {
-    display: block;
-    height: 55%;
-    left: 15%;
-    position: absolute;
-    top: 35%;
-    width: 0;
-}
-
-#videoflash {
-    display: block;
-    position: relative;
-    top: 35%;
-}
-
-.videoFastCheckOut {
-    display: block;
-    height: 55%;
-    right: 40%;
-    position: absolute;
-    top: 54%;
-    width: 0;
-}
-
-#videoFast {
-    display: block;
-    position: relative;
-    bottom: 0.2%;
 }
 
 .flascardContainer {
