--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 #headPic {
-    width: 100%;
+    width: 64em;
     height: 18.750em;
     opacity: 0.45;
 }
@@ -16,13 +16,13 @@ body {
 #header1 {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: white;
-    text-shadow: 0.40em 0.40em 0.40em #1F2833;
+    text-shadow: 0.50em 0.50em 0.50em #1F2833;
 }
 
 #header2 {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: white;
-    text-shadow: 0.40em 0.40em 0.40em #1F2833;
+    text-shadow: 0.50em 0.50em 0.50em #1F2833;
 }
 
 #introHeader {
@@ -47,7 +47,7 @@ body {
     border-radius: 0.50em;
     width: 8em;
     padding: 0.12em;
-    margin: 20%;
+    margin: 0.25em;
 }
 
 a:link {
@@ -71,15 +71,15 @@ a:link {
 
 .aboutMeContainer {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: medium;
+    font-size: 1em;
     text-align: left;
     color: white;
-    margin: 2em;
+    margin: 0.02em;
 }
 
 #aboutHeader {
     color: white;
-    font-size: large;
+    font-size: 1.50em;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
@@ -94,15 +94,12 @@ a:link {
     font-size: 1.2em;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: bold;
-    margin: 2%;
 }
 
 #profileContent {
     color: white;
     font-size: 0.8em;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    padding: 1%;
-    margin: 2%;
     border: 0.06em solid white;
     border-radius: 0.50em;
     background-color: #45A29E;
@@ -276,7 +273,7 @@ td {
     margin: 2%;
     text-align: center;
     background-color: #45A29E;
-    border-radius: 8px;
+    border-radius: 0.50em;
 }
 
 .toolBar:hover {
