--- a/style.css
+++ b/style.css
@@ -74,12 +74,12 @@ a:link {
     font-size: 1em;
     text-align: left;
     color: white;
-    margin: 0.02em;
+    margin: 2em;
 }
 
 #aboutHeader {
     color: white;
-    font-size: 1.50em;
+    font-size: 1em;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
@@ -91,57 +91,66 @@ a:link {
 
 .resumeHeaders {
     color: white;
-    font-size: 1.2em;
+    font-size: 1.3em;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: bold;
+    margin: 2.5%;
+    padding: 0.5%;
+}
+
+#profileContainer {
+    padding: 0.5%;
+    margin: 2.5%;
+    position: absolute;
+    left: 0.50em;
 }
 
 #profileContent {
     color: white;
     font-size: 0.8em;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    padding: 0.5%;
+    margin: 2.5%;
     border: 0.06em solid white;
     border-radius: 0.50em;
     background-color: #45A29E;
     width: 90em;
 }
 
-#skillsContent {
-    width: 37.50em;
-    position: absolute;
-    left: 0.50em;
+#allSkillsContainer {
+    position:absolute;
     top: 31em;
+    margin: 2.5%;
+    padding:0.5%;
 }
 
-#skillsHeader {
-    position: absolute;
-    left: 0.50em;
-    top: 23em;
-} 
-
-#techExperienceHeader {
-    position: absolute;
-    right: 23em;
-    top: 23em;
+#skillsContentContainer{
+    width: 36em;
+    margin:2.5%;
+    padding:0.5%;
 }
 
-.techSkillsContent {
+#techSkillsContentContainer {
+    width:36em;
+    margin:2.5%;
+    padding:0.5%;
     position: absolute;
-    left: 18.5em;
-    top: 15.5em;
-    width: 37.50em;
+    top: 0.5em;
+    left: 38em;
 }
 
 .skillsBulletPoints {
     color: white;
-    font-size: 0.8em;
+    font-size: 0.9em;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 #educationBackgroundContainer {
     position: absolute;
-    top: 46em;
+    top: 52em;
     left: 0.50em;
+    padding:0.5%;
+    margin:2.5%;
 }
 
 #bachelorsContainer {
@@ -172,16 +181,19 @@ a:link {
 
 #workExpeContainer{
     position: absolute;
-    top: 60em;
+    top: 67em;
     left: 1em; 
     width: 75em;
+    padding:0.5%;
+    margin:2.5%;
 }
 
 .table {
     color: white;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 0.9em;
-    margin: 1%;
+    font-size: 1em;
+    margin: 2.5%;
+    padding: 0.5%;
 }
 
 th {
