--- a/style.css
+++ b/style.css
@@ -4,13 +4,9 @@ body {
 }
 
 #headPic {
-    width: 64em;
+    width: 100%;
     height: 18.750em;
     opacity: 0.45;
-}
-
-#picContainer {
-    background-color: #C5C6C7;
 }
 
 #header1 {
@@ -65,8 +61,18 @@ a:link {
 
 .container2 {
     position: absolute;
-    top: 0.50em;
+    top: 0;
+    left: 0;
+    width:15%;
+    background-color: #C5C6C7;
+    height: 18.750em;
+}
+
+#mainButtonContainer {
+    position:absolute;
+    top: 2em;
     left: 1em;
+    padding:0.5%;
 }
 
 .aboutMeContainer {
@@ -118,22 +124,22 @@ a:link {
 }
 
 #allSkillsContainer {
-    position:absolute;
+    position: absolute;
     top: 31em;
     margin: 2.5%;
-    padding:0.5%;
+    padding: 0.5%;
 }
 
-#skillsContentContainer{
+#skillsContentContainer {
     width: 36em;
-    margin:2.5%;
-    padding:0.5%;
+    margin: 2.5%;
+    padding: 0.5%;
 }
 
 #techSkillsContentContainer {
-    width:36em;
-    margin:2.5%;
-    padding:0.5%;
+    width: 36em;
+    margin: 2.5%;
+    padding: 0.5%;
     position: absolute;
     top: 0.5em;
     left: 38em;
@@ -149,8 +155,8 @@ a:link {
     position: absolute;
     top: 52em;
     left: 0.50em;
-    padding:0.5%;
-    margin:2.5%;
+    padding: 0.5%;
+    margin: 2.5%;
 }
 
 #bachelorsContainer {
@@ -179,13 +185,13 @@ a:link {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-#workExpeContainer{
+#workExpeContainer {
     position: absolute;
     top: 67em;
-    left: 1em; 
+    left: 1em;
     width: 75em;
-    padding:0.5%;
-    margin:2.5%;
+    padding: 0.5%;
+    margin: 2.5%;
 }
 
 .table {
@@ -223,10 +229,10 @@ td {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-#videoHeadersContainer{
+#videoHeadersContainer {
     width: 75em;
     margin: 1.5%;
-    padding:0.4%;
+    padding: 0.5%;
 }
 
 #flashHeaderContainer {
@@ -234,7 +240,8 @@ td {
     font-size: 1em;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: bold;
-    margin: 1%;
+    margin: 1.5%;
+    padding:0.5%;
     text-align: center;
     width: 37.5em;
     position: absolute;
@@ -247,7 +254,8 @@ td {
     font-size: 1em;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: bold;
-    margin: 1%;
+    margin: 1.5%;
+    padding:0.5%;
     text-align: center;
     width: 37.5em;
     position: absolute;
@@ -255,24 +263,31 @@ td {
     left: 38em;
 }
 
-#videosContainer{
-    position:absolute;
-    top:25em;
+#videosContainer {
+    position: absolute;
+    top: 25em;
+    padding:0.5%;
+    margin:1.5%;
 }
 
 #videoFlascardsContainer {
     position: absolute;
     left: 4em;
     top: 1em;
-    margin: 1%;
-    background-color:orange;
+    margin: 1.5%;
+    padding:0.5%;
 }
 
 #videoFastCheckOutContainer {
     position: absolute;
     left: 22em;
     top: 1em;
-    margin: 1%;
+    margin: 1.5%;
+    padding:0.5%;
+}
+
+#toolBarContainer{
+    padding:1.5%;
 }
 
 .toolBar {
@@ -281,8 +296,7 @@ td {
     height: initial;
     font-size: large;
     width: 20%;
-    float: left;
-    margin: 2%;
+    margin: 2.5%;
     text-align: center;
     background-color: #45A29E;
     border-radius: 0.50em;
@@ -299,7 +313,7 @@ td {
 }
 
 #flashButton {
-    float:left;
+    float: left;
     position: relative;
     left: 200px;
 }
@@ -323,7 +337,7 @@ td {
     background-color: #C5C6C7;
 }
 
-.flashButton{
+.flashButton {
     color: white;
     background-color: #1F2833;
     text-align: left;
@@ -333,4 +347,128 @@ td {
     border-radius: 8px;
     width: 60%;
     padding: 1%;
+}
+
+* {
+    box-sizing: border-box
+}
+
+body {
+    font-family: Verdana, sans-serif;
+    margin: 0
+}
+
+.mySlides {
+    display: none
+}
+
+img {
+    vertical-align: middle;
+}
+
+/* Slideshow container */
+.slideshow-container {
+    max-width: 50em;
+    position: absolute;
+    margin:2.5%;
+    padding: inherit;
+    top: 23em;
+    left:15em;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+}
+
+/* Position the "next button" to the right */
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+    /* On hover, add a black background color with a little bit see-through */
+    .prev:hover, .next:hover {
+        background-color: rgba(0,0,0,0.8);
+    }
+
+/* Caption text */
+.text {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+    .active, .dot:hover {
+        background-color: #717171;
+    }
+
+/* Fading animation */
+.fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+    from {
+        opacity: .4
+    }
+
+    to {
+        opacity: 1
+    }
+}
+
+@keyframes fade {
+    from {
+        opacity: .4
+    }
+
+    to {
+        opacity: 1
+    }
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+    .prev, .next, .text {
+        font-size: 11px
+    }
 }
