--- a/style.css
+++ b/style.css
@@ -3,6 +3,15 @@ body {
     background-color: #1F2833;
 }
 
+#mainContainer {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+/*ELEMENTS IN INDEX HTML*/
+
 #headPic {
     width: 100%;
     height: 18.750em;
@@ -94,6 +103,8 @@ a:link {
     top: 3.75em;
     right: 10.73em;
 }
+
+/*ELEMENTS IN RESUME HTML*/
 
 .resumeHeaders {
     color: white;
