--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 ﻿
 body {
     background-color: #1F2833;
+    margin: 0;
 }
 
 #mainContainer {
@@ -111,13 +112,13 @@ a:link {
     font-size: 1.3em;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: bold;
-    margin: 0.2%;
+    margin: 0.25%;
     padding: 0.25%;
 }
 
 #profileContainer {
     padding: 0.25%;
-    margin: 0.2%;
+    margin: 2.5%;
     position: absolute;
     left: 0.50em;
 }
@@ -137,8 +138,8 @@ a:link {
 #allSkillsContainer {
     position: absolute;
     top: 26em;
-    margin: 0.2%;
-    padding: 0.25%;
+    margin: 2.5%;
+    padding: 0.5%;
 }                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           
 
 #skillsContentContainer {
@@ -164,7 +165,7 @@ a:link {
 
 #educationBackgroundContainer {
     position: absolute;
-    top: 52em;
+    top: 49em;
     left: 0.50em;
     padding: 0.5%;
     margin: 2.5%;
@@ -198,7 +199,7 @@ a:link {
 
 #workExpeContainer {
     position: absolute;
-    top: 67em;
+    top: 65em;
     left: 1em;
     width: 75em;
     padding: 0.5%;
@@ -210,7 +211,7 @@ a:link {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 1em;
     margin: 2.5%;
-    padding: 0.5%;
+    padding: 0;
 }
 
 th {
@@ -240,9 +241,15 @@ td {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
+/*ELEMENTS IN PORTFOLIO HTML*/
+
+#wrapVideosHeadersAndToolBar {
+    margin: 0;
+}
+
 #videoHeadersContainer {
     width: 75em;
-    margin: 1.5%;
+    margin: 2.5%;
     padding: 0.5%;
 }
 
@@ -251,13 +258,13 @@ td {
     font-size: 1em;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: bold;
-    margin: 1.5%;
+    margin: 0.5%;
     padding:0.5%;
     text-align: center;
     width: 37.5em;
     position: absolute;
     top: 19.5em;
-    left: 3em;
+    left: 4em;
 }
 
 #fastCheckoutHeaderContainer {
@@ -265,27 +272,26 @@ td {
     font-size: 1em;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: bold;
-    margin: 1.5%;
+    margin: 0.5%;
     padding:0.5%;
     text-align: center;
     width: 37.5em;
     position: absolute;
     top: 19.5em;
-    left: 38em;
+    left: 39.5em;
 }
 
 #videosContainer {
     position: absolute;
     top: 25em;
     padding:0.5%;
-    margin:1.5%;
+    margin:2.5%;
 }
 
 #videoFlascardsContainer {
     position: absolute;
     left: 4em;
     top: 1em;
-    margin: 1.5%;
     padding:0.5%;
 }
 
@@ -293,40 +299,37 @@ td {
     position: absolute;
     left: 22em;
     top: 1em;
-    margin: 1.5%;
     padding:0.5%;
 }
 
-#toolBarContainer{
-    padding:1.5%;
+#toolBarContainer {
+    margin: 2.5%;
+    padding: 0.5%;
+    position: absolute;
+    top: 21.5em;
+    left: 14.5em;
 }
 
 .toolBar {
     color: white;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    height: initial;
     font-size: large;
-    width: 20%;
-    margin: 2.5%;
     text-align: center;
     background-color: #45A29E;
     border-radius: 0.50em;
+    width: 12em;
 }
 
 .toolBar:hover {
     background-color: #C5C6C7;
 }
 
-#fastButton {
-    float: right;
-    position: relative;
-    right: 200px;
-}
+/*ELEMENTS IN FLASCARDS HTML*/
 
-#flashButton {
-    float: left;
-    position: relative;
-    left: 200px;
+#backToPortfolioButton {
+    position: absolute;
+    top: 17em;
+    left: 57em;
 }
 
 .portfolioButton {
@@ -334,39 +337,39 @@ td {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     height: initial;
     font-size: medium;
-    width: 100px;
+    width: 6.25em;
 }
 
 .flascardContainer {
     background-color: #45A29E;
-    width: 17%;
-    height: 10%;
-    padding: 1%;
+    position: absolute;
+    top: 43%;
+    left: 0;
+    width: 15%;
+    height: 12em;
+    padding: 1.5%;
 }
 
-.flashButton:hover {
+.flashcardToolBarButtons:hover {
     background-color: #C5C6C7;
 }
 
-.flashButton {
+.flashcardToolBarButtons {
     color: white;
     background-color: #1F2833;
     text-align: left;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    height: initial;
-    font-size: small;
-    border-radius: 8px;
-    width: 60%;
-    padding: 1%;
+    font-size: 0.9em;
+    border-radius: 0.50em;
+    width: 10em;
+    padding: 5%;
+    margin: 0.2%;
 }
 
+/*ELEMENTS IN DIAGRAM, ESTIMATION, SKETCHES AND STORY BOARD HTML*/
+/*take from: https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_slideshow */
 * {
     box-sizing: border-box
-}
-
-body {
-    font-family: Verdana, sans-serif;
-    margin: 0
 }
 
 .mySlides {
@@ -384,7 +387,7 @@ img {
     margin:2.5%;
     padding: inherit;
     top: 23em;
-    left:15em;
+    left: 20%;
 }
 
 /* Next & previous buttons */
@@ -408,15 +411,17 @@ img {
     border-radius: 3px 0 0 3px;
 }
 
-    /* On hover, add a black background color with a little bit see-through */
-    .prev:hover, .next:hover {
-        background-color: rgba(0,0,0,0.8);
-    }
+ /* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+}
 
 /* Caption text */
 .text {
-    color: #f2f2f2;
-    font-size: 15px;
+    color: black;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 1.5em;
+    font-weight: bolder;
     padding: 8px 12px;
     position: absolute;
     bottom: 8px;
@@ -426,8 +431,10 @@ img {
 
 /* Number text (1/3 etc) */
 .numbertext {
-    color: #f2f2f2;
-    font-size: 12px;
+    color: black;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 0.8em;
+    font-weight: bolder;
     padding: 8px 12px;
     position: absolute;
     top: 0;
