--- a/style.css
+++ b/style.css
@@ -346,7 +346,7 @@ td {
     top: 43%;
     left: 0;
     width: 15%;
-    height: 12em;
+    height: 18.750em;
     padding: 1.5%;
 }
 
@@ -357,13 +357,14 @@ td {
 .flashcardToolBarButtons {
     color: white;
     background-color: #1F2833;
-    text-align: left;
+    text-align: center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 0.9em;
     border-radius: 0.50em;
     width: 10em;
-    padding: 5%;
-    margin: 0.2%;
+    height: 3em;
+    padding: 0.5%;
+    margin: 0.3%;
 }
 
 /*ELEMENTS IN DIAGRAM, ESTIMATION, SKETCHES AND STORY BOARD HTML*/
