--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@ a:link {
     position: absolute;
     top: 3.75em;
     right: 10.73em;
+
 }
 
 /*ELEMENTS IN RESUME HTML*/
@@ -361,10 +362,10 @@ td {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 0.9em;
     border-radius: 0.50em;
-    width: 10em;
-    height: 3em;
-    padding: 0.5%;
-    margin: 0.3%;
+    height:3.5em;
+    width: 9em;
+    padding: 0.2em;
+    margin: 0.25em;
 }
 
 /*ELEMENTS IN DIAGRAM, ESTIMATION, SKETCHES AND STORY BOARD HTML*/
